fix render img + pagination

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -21,14 +21,14 @@
         <% @items.each do |item| %>
             <div class="col-md-7">
                 <a href="<%= item_path(item) %>">
-                    <img class="img-responsive" src="<%= image_tag("sticker.jpg") %>" alt="">
+                    <%= image_tag("sticker.jpg", class: "img-responsive")%>
                 </a>
             </div>
             <div class="col-md-5">
                 <h3><a href="<%= item_path(item) %>"><%= item.title %></a></h3>
                 <h4><%= item.slogan %></h4>
                 <p><%= item.description %></p>
-                <a class="btn btn-primary" href="<%= item_path(item) %>"">View Product <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="<%= item_path(item) %>">View Product <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         <% end %>
         <div class="row text-center">
