--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,6 +2,9 @@
     <div class="col-md-12">
         <ol class="breadcrumb">
             <li><a href="/">Home</a></li>
+            <% if !@category.nil? %>
+                <li class="active"><%= @category.name %></li>
+            <% end %>
         </ol>
     </div>
 </div>
@@ -11,9 +14,21 @@
     <div class="col-md-2">
         <div class="list-group">
             <% @categories.each do |cat| %>
-                <a href="<%= category_path(cat) %>" class="list-group-item active">
-                   <%= cat.name %>
-                </a>
+                <% if @category.nil? %>
+                    <a href="<%= category_path(cat) %>" class="list-group-item inactive">
+                       <%= cat.name %>
+                    </a>
+                <% else %>
+                    <% if cat.id == @category.id %>
+                        <a href="<%= category_path(cat) %>" class="list-group-item active">
+                            <%= cat.name %>
+                        </a>
+                    <% else %>
+                        <a href="<%= category_path(cat) %>" class="list-group-item inactive">
+                            <%= cat.name %>
+                        </a>    
+                    <% end %>
+                <% end %>
             <% end %>
         </div>
     </div>
@@ -21,7 +36,7 @@
         <% @items.each do |item| %>
             <div class="col-md-7">
                 <a href="<%= item_path(item) %>">
-                    <%= image_tag("sticker.jpg", class: "img-responsive")%>
+                    <%= image_tag(item.img_url, class: "img-responsive")%>
                 </a>
             </div>
             <div class="col-md-5">
