--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -34,17 +34,20 @@
     </div>
     <div class="col-md-10">
         <% @items.each do |item| %>
-            <div class="col-md-7">
-                <a href="<%= item_path(item) %>">
-                    <%= image_tag(item.img_url, class: "img-responsive")%>
-                </a>
+            <div class="row">
+                <div class="col-md-7">
+                    <a href="<%= item_path(item) %>">
+                        <%= image_tag(item.img_url, class: "img-responsive") %>
+                    </a>
+                </div>
+                <div class="col-md-5">
+                    <h3><a href="<%= item_path(item) %>"><%= item.title %></a></h3>
+                    <h4><%= item.slogan %></h4>
+                    <p><%= item.description %></p>
+                    <a class="btn btn-primary" href="<%= item_path(item) %>">View Product <span class="glyphicon glyphicon-chevron-right"></span></a>
+                </div>
             </div>
-            <div class="col-md-5">
-                <h3><a href="<%= item_path(item) %>"><%= item.title %></a></h3>
-                <h4><%= item.slogan %></h4>
-                <p><%= item.description %></p>
-                <a class="btn btn-primary" href="<%= item_path(item) %>">View Product <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
+            <hr>
         <% end %>
         <div class="row text-center">
             <div class="col-lg-12">
