--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -25,7 +25,7 @@
                 </li>
             </ul>
             <div class="collapse navbar-collapse">
-                <form class="navbar-form navbar-right" role="search" action="/search">
+                <form class="navbar-form navbar-right" role="search" action="<%= search_items_path() %>">
                     <div class="form-group">
                         <input type="text" class="form-control" name="query" placeholder="Search">
                     </div>
