--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 <body>
 <%= render 'layouts/shared/header' %>
 <div class="container">
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
   <%= yield %>  
 </div>
 <%= render 'layouts/shared/footer' %>
