add devise view

--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -15,7 +15,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="#">Log In</a>
+                    <a href="<%= new_user_session_path %>">Log In</a>
+                </li>
+                <li>
+                    <a href="<%= new_user_registration_path %>">Sign Up</a>
                 </li>
                 <li>
                     <a href="#"><strong>Admin Panel</strong></a>
