--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -15,28 +15,41 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="<%= new_user_session_path %>">Log In</a>
-                </li>
-                <li>
-                    <a href="<%= new_user_registration_path %>">Sign Up</a>
-                </li>
-                <li>
                     <a href="#"><strong>Admin Panel</strong></a>
                 </li>
             </ul>
             <div class="collapse navbar-collapse">
-                <form class="navbar-form navbar-right" role="search" action="<%= search_items_path() %>">
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="query" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                    <a href="/cart">
-                        <button type="button" class="btn btn-success">
-                            <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Cart
-                        </button>
-                    </a>
-                </form>
-
+                
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <form class="navbar-form" role="search" action="<%= search_items_path() %>">
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="query" placeholder="Search">
+                            </div>
+                            <button type="submit" class="btn btn-default">Submit</button>
+                            <% if user_signed_in? %>
+                                <a href="<%= user_cart_path(current_user,current_user.cart) %>">
+                                    <button type="button" class="btn btn-success">
+                                        <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Cart
+                                    </button>
+                                </a>
+                            <% end %>
+                        </form>
+                    </li>
+                    <li class="dropdown">
+                        <% if user_signed_in? %>
+                          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                          <ul class="dropdown-menu">
+                             <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+                          </ul>
+                        <% else %>
+                            <a href="<%= new_user_session_path %>">Sign In</a>
+                        <% end %>
+                    </li>
+                </ul>
             </div>
 
         </div>
