--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,12 @@
 <body>
 <%= render 'layouts/shared/header' %>
 <div class="container">
-  <% flash.each do |key, msg| %>
-    <%= content_tag :div, class: "alert alert-#{key}", id: "notice" do %>
-        <a class="close" data-dismiss="alert" href="#">&times;</a>
-        <%= msg %>
+  <% flash.each do |name, msg| %>
+    <% if msg.is_a?(String) %>
+      <div class="alert alert-<%= name.to_s == 'notice' ? 'success' : 'danger' %>">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      </div>
     <% end %>
   <% end %>
   <%= yield %>  
