--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -54,7 +54,9 @@
         <%= @item.description %>
       </p>
       
-      <form action="#" role="form" method="post">
+      <form action="<%= add_user_carts_path(current_user) %>" role="form" method="post">
+        <%= hidden_field_tag :item_id, @item.id -%>
+        <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
         <button class="btn btn-primary" type="submit">
           Add to cart
           <span class="glyphicon glyphicon-chevron-right"></span>
