--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -13,11 +13,15 @@
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="#"><strong>Admin Panel</strong></a>
-                </li>
-            </ul>
+            <% if user_signed_in? %>
+                <% if current_user.is_admin %>
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="/admin"><strong>Admin Panel</strong></a>
+                        </li>
+                    </ul>
+                <% end %>
+            <% end %>
             <div class="collapse navbar-collapse">
                 
                 <ul class="nav navbar-nav navbar-right">
@@ -40,9 +44,6 @@
                         <% if user_signed_in? %>
                           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
                           <ul class="dropdown-menu">
-                             <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
                             <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
                           </ul>
                         <% else %>
